fix for page width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ body {
   font-family: var(--font1);
   overflow-x: hidden;
   cursor: default;
-  min-height: 100vh;
-  min-width: 100vw;
 }
 
 a {
